<resources>
    <string name="app_name">Recipe Book</string>
    <string name="numResults">Nombre de résultats : </string>
    <string name="search">Rechercher</string>
    <string name="recipeName">Nom de la recette</string>
    <string name="results">Votre recherche :</string>
    <string name="home">Accueil</string>
    <string name="about">A propos de</string>
    <string name="alt_img">Photo de la recette</string>
    <string name="instructions">Instructions :</string>
    <string name="ingredients">Ingrédients :</string>
    <string name="random">Recette aléatoire</string>
    <string name="credit">Application créée par Axel IGHIR et Mickaël DONOSO</string>
    <string name="db_credit">Base de données : TheMealDB.</string>
    <string name="icons_credit">Icônes : Icons8.</string>
    <string name="alt_icon_app">Icone de l\'application</string>
    <string name="empty_query">Votre recherche est vide.</string>
    <string name="categ">Catégorie</string>
    <string name="origin">Pays</string>
    <string name="by_categ">Recettes par catégorie :</string>
    <string name="by_country">Recettes par pays :</string>
</resources>
